--- a/src/jbake/content/posts/2021-12-20-new-blog.md
+++ b/src/jbake/content/posts/2021-12-20-new-blog.md
@@ -1,19 +1,18 @@
-title=How to create a blog with JBake and Gradle
+title=It's time for a new blog
 date=2021-12-20
 type=post
 tags=blog,gradle,jbake
 status=published
-headline=How to create a blog with JBake and Gradle
-summary=JBake and Gradle are both amazing tools that let you create a static site in no time. I describe how I created this blog that way.
-image=images/jbake_gradle.png
+headline=It's time for a new blog
+subheadline=Replacing blogger with JBake and gradle
+summary=It's time to say goodbye to my old blog and hello to my new one.
+image=images/typewriter-5257028_960_720.jpg
 ~~~~~~
 ## Good old times
 It was nearly [a decade ago](https://hannomalie.github.io/posts/2012-06-12-ssao.html) when I first felt that I might need to write about the cool experiments I do on a blog
 or otherwise I will forget that they ever happened. And [blogger](https://hannosprogrammingblog.blogspot.com/) served me well, but using its wysiwyg editor for
 code wasn't a pleasure - and I had plenty of code to share over the years! For this reason, my old blog posts contain a colored bunch of different ways of formatted code:
-
 Manually generated html-css-mixes from pages like hilite.me (which is especially bad when you have to alter the code again while writing), kotlin playground embeds, github gists, italic text ... screenshots? I hope not.
-
 It was time to have something better.
 
 ## Too many options
@@ -23,6 +22,10 @@ setups, paths and dependency, tool or operating system issues. To be exhaustive,
 And then, there is always that one ages old JVM library that does what you need and is stable. In this case, it's [JBake](https://www.jbake.org). Take a look at the comperatively short and sober [documentation](https://jbake.org/docs/2.6.6/) that doesn't even try to be fancy. It's dead simple: You have content, you have templates, they get rendered, done. Would they leave out the bloated chapter 9.1, the documentation would be two thirds long.
 
 And do you know what's the best? It's a JVM dependency. Which means besides using a precompiled executable, you can just use the dependency in whatever JVM execution environment you like.
-I am hinting at Gradle here. Gradle is best for automating any workflow you can imagine. Step by step, let's take a look how to use Gradle and JBake to create a blog. 
+I am hinting at Gradle here. Gradle is best for automating any workflow you can imagine. But step by step, let's take a look how to use Gradle and JBake to create a blog in a future post.
+
+Now I just want to state that I imported all posts from my old blog without content-related changes and did my best to keep the format in shape. Some needed to be translated, some links needed to be fixed.
+
+And now, enjoy the new blog with me :) 
 
  
